--- a/room-rover-backend/.env
+++ b/room-rover-backend/.env
@@ -1,7 +1,7 @@
 SMTP_HOST = smtp.gmail.com
 SMTP_PORT = 465
 SMTP_MAIL = vinaychoithani223@gmail.com
-SMTP_PASSWORD = naax xnry zjdl nohp
+SMTP_PASSWORD = dswimiksmvwkdycu
 PORT = 4000
 
 
