--- a/room-rover/package.json
+++ b/room-rover/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
+    "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^7.0.0",
     "nodemailer": "^6.9.7",
     "react": "^18.2.0",
